# nurbsbook

./: .gitignore  CMakeLists.txt
src/: nurbsbook.cpp  nurbsbook.hpp
test/: nurbsbook_test.cpp
